--- a/style.css
+++ b/style.css
@@ -262,8 +262,8 @@ body{
     top: 0;
     left: 0;
     background: linear-gradient(to right, var(--dark2), var(--contrast-color), var(--dark2));
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr; 
+   /*  display: grid;
+    grid-template-rows: 1fr 1fr 1fr;  */
 }
 .Home__img-container{
     width: 100%;
@@ -323,40 +323,81 @@ body{
 
 
 
-/* Home Content Part 1 */
-.Home__content-container-one{
+/* BioVitalAge Clock */
+.Bio_Vital_Age_Clock{
+    position: absolute;
+    top: 960px;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    height: 2900px;
     width: 100%;
-    grid-row: 2 / 2;
+    background: linear-gradient(to right, var(--dark2), var(--contrast-color), var(--dark2));
+}
+.Bio_Clock-container{
+    height: 850px;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
-.home-card__container{
-    width: 100%;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-.Home__content-container-two{
-    width: 100%;
-    grid-row: 3 / 3;
+.bio-clock-image-container{
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 50%;
 }
-
-.home-card__container{
+.container-hidden{
+    width: 60%;
+    height: 60%;
+    border-radius: 20px;
+    overflow: hidden;
+}
+.bio-clock-image-container img{
     width: 100%;
+    height: 100%;
+    opacity: 1;
+    border-radius: 20px;
+    box-shadow: 6px 8px 8px 8px rgba(0, 0, 0, 0.2);
+    transition: 0.3s ease-in-out;
+    opacity: 0.8;
+}
+.bio-clock-image-container img:hover{
+    transform: scale(1.1);
+}
+.Bio-Clock-description{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+}
+.Bio-subtitle{
+    color: var(--tittl2);
+    padding: 20px 0px;
+    font-weight: bold;
+    font-size: 25px;
+    letter-spacing: 1px;
+    font-style: italic;
+}
+.Bio-Clock-description h3{
+    padding: 20px 0px;
+    font-size: 30px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    color: var(--tittle1);
+}
+.description{
+    font-size: 18px;
+    color: var(--light1);
+    letter-spacing: 1px;
+    line-height: 2rem;
+    max-width: 60%;
+}
+.bio-btn{
+    width: 14rem;
+    height: 3rem;
+    margin-top: 1.5rem;
 }
 
 
@@ -370,24 +411,15 @@ body{
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-.test{
-    grid-row: 3 / 3;
-    height: 950px;
-    background-color: cyan;
-
+.Bio-Clock-container-two{
+    display: none;
 }
+
+
+
+
+
+
 
 
 
