--- a/style.css
+++ b/style.css
@@ -69,26 +69,37 @@
 
 
 /* :root --Generic Card Style */
+.card-container{
+    width: 82%;
+    height: 80%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
 .Card {
     width: 30%;
-    height: 100%;
+    height: 90%;
     margin: auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    gap: 20px; 
+    gap: 10px; 
     border-radius: 12px;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2); 
     background-color: rgba(255, 255, 255, 0.05);  
-}
-.Card-img {
-    width: 100%;
-    height: 40%;
     overflow: hidden;
 }
-.Card-img img {
+.Card-img {
+    width: 92%;
+    height: 50%;
+    overflow: hidden;
+    margin: 1rem auto 0rem auto;
     border-radius: 12px;
+}
+.Card-img img {
     width: 100%;
     height: auto;
     opacity: 0.8;
@@ -98,20 +109,22 @@
     transform: scale(1.05); 
 }
 .Card-description{
-    width: 55%;
+    height: 50%;
+    width: 90%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: flex-start;
-    padding: 10px;
 }
 .Card-description h3 {
-    font-size: 32px;
+    font-size: 25px;
     font-style: italic;
     font-weight: bold;
     color: var(--tittle1);
     margin-bottom: 15px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); 
+    height: 20%;
+    padding-top: 20px;
 }
 .Card-description p {
     max-width: 100%;
@@ -119,8 +132,10 @@
     font-weight: 300;
     color: var(--light1);
     line-height: 1.8rem;
-    text-align: justify;
+    letter-spacing: 1px;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2); 
+    height: 80%;
+    margin-top: -1rem;
 }
 
 
@@ -334,11 +349,15 @@ body{
     background: linear-gradient(to right, var(--dark2), var(--contrast-color), var(--dark2));
 }
 .Bio_Clock-container{
-    height: 850px;
+    height: 900px;
     width: 100%;
+    margin-top: 2rem;
+}
+.bio-clock-content-container{
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100%;
 }
 .bio-clock-image-container{
     height: 100%;
@@ -408,12 +427,6 @@ body{
 
 
 
-
-
-
-.Bio-Clock-container-two{
-    display: none;
-}
 
 
 
